--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "^2.10.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native": "^7.0.8",
+    "@react-navigation/stack": "^7.0.13",
+    "axios": "^1.7.8",
     "expo": "~52.0.11",
+    "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-document-picker": "~13.0.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.13",
@@ -30,15 +37,28 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "formik": "^2.4.6",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-bottom-tabs": "^0.6.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-event-source": "^1.1.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
+    "react-native-selectable-text": "^1.0.2",
+    "react-native-stack": "^1.0.0-alpha11",
+    "react-native-svg": "15.8.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.2",
+    "tailwindcss": "^3.4.15",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
