--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-markdown-display": "^7.0.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
