--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-audio-recorder-player": "^3.6.12",
     "react-native-bottom-tabs": "^0.6.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-event-source": "^1.1.0",
