get the dropdowns , handel changing their values and make request to the server in the chatpage based on them

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "chatgbt",
-    "slug": "chatgbt",
+    "name": "ISISai",
+    "slug": "ISISai",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.jpg",
